build/apps/uptime-kuma/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  # labels:
  #   app.kubernetes.io/name: uptime-kuma
  #   app: uptime-kuma
  #   name: uptime-kuma

spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
        task: uptime-kuma
    spec:
      containers:
      - image: louislam/uptime-kuma:latest
        name: uptime-kuma
        
        #resources:
          # requests:
          #   memory: "256Mi"
          #   cpu: "100m"
            
          # limits: 
          #   memory: "512Mi"
          #   cpu: "250m" 
        ports: 
          - containerPort: 3001

      #   volumeMounts:
      #   - name: uptime-kuma-content
      #     mountPath: /app/data

      # volumes:
      # - name: uptime-kuma-content
      #   persistentVolumeClaim:
      #     claimName: uptime-kuma-claim
