build/apps/uptime-kuma/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ports:
    - name: uptime-kuma
      protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app.kubernetes.io/name: uptime-kuma
    task: uptime-kuma
