build/apps/uptime-kuma/base/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: uptime-kuma
