build/apps/uptime-kuma/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  # labels:
  #   app.kubernetes.io/name: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    #external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptime.anotherlife.pl`)
      middlewares:
        - name: headers
          namespace: traefik
      services:
        - kind: TraefikService
          name: uptime-kuma
          port: 80

  tls:
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    #secretName: letsencrypt-staging
